--- a/FastAPI/app/.env.example
+++ b/FastAPI/app/.env.example
@@ -1,6 +1,7 @@
-API_KEY = test
-MYSQL_DATABASE = test
-MYSQL_HOST = test
-MYSQL_PORT = test
-MYSQL_USER = test
-MYSQL_PASSWORD = test
+API_KEY = tu_api_key
+MYSQL_ROOT_PASSWORD= example
+MYSQL_DATABASE = db_example
+MYSQL_HOST = example
+MYSQL_PORT = 3306
+MYSQL_USER = example
+MYSQL_PASSWORD = example
